Updating for 0.6. Adding a generic pointer. Adding an optimization to RefArg.